@@ -27,28 +27,15 @@ public class ClientConverter {
         dto.setStatus(entity.getStatus());
         dto.setWorkingFrom(entity.getWorkingFrom());
         dto.setAgreementExpiryDate(entity.getAgreementExpiryDate());
+        dto.setServiceType(entity.getServiceType());
         dto.setClientDetails(entity.getClientDetails());
-        dto.getContacts().addAll(entity.getClientContacts().stream().map(ContactConverter::toTransportModel).filter(Objects::nonNull).collect(Collectors.toList()));
-        dto.setEscalation(entity.getEscalation() != null ? EscalationConverter.toTransportModel(entity.getEscalation()) : null);
+        dto.getContacts().addAll(entity.getClientContacts ().stream ().map (ContactConverter::toTransportModel).filter (Objects::nonNull).toList ());
+        dto.getEscalations().addAll (entity.getEscalations ().stream ().map (EscalationConverter::toTransportModel).filter (Objects::nonNull).toList ());
         dto.setAddress(entity.getClientAddress() != null ? AddressConverter.toTransportModel(entity.getClientAddress()) : null);
-        dto.getGst().addAll(entity.getGst().stream().map(GstConverter::toTransportModel).filter(Objects::nonNull).collect(Collectors.toList()));
-        Optional<ClientDocument> agreementOpt = entity.getFiles().stream().filter(file -> file.getType() == DocumentType.agreement).findFirst();
+        dto.getGst().addAll(entity.getGst ().stream ().map (GstConverter::toTransportModel).filter (Objects::nonNull).toList ());
         dto.setNotes(new ArrayList<>());
-
-        if (agreementOpt.isPresent()) {
-            DocumentDto documentDto = DocumentConverter.toTransportModel(agreementOpt.get());
-            documentDto.setUrl(DocumentConverter.getDocumentUrl(entity.getId(), documentDto.getId(), DocumentType.agreement));
-            dto.setAgreement(documentDto);
-        }
-
-        Optional<ClientDocument> imageOpt = entity.getFiles().stream().filter(file -> file.getType() == DocumentType.image).findFirst();
-        if (imageOpt.isPresent()) {
-            DocumentDto documentDto = DocumentConverter.toTransportModel(imageOpt.get());
-            documentDto.setUrl(DocumentConverter.getDocumentUrl(entity.getId(), documentDto.getId(), DocumentType.image));
-            dto.setClientLogo(documentDto);
-        }
         dto.getNotes().addAll(entity.getNotes().stream()
-                .map(ClientNotesConverter::toTransportModel).filter(Objects::nonNull).collect(Collectors.toList()));
+                .map(ClientNotesConverter::toTransportModel).filter(Objects::nonNull).toList());
 
         return dto;
     }
@@ -78,6 +65,7 @@ public class ClientConverter {
         entity.setStatus(transport.getStatus());
         entity.setWorkingFrom(transport.getWorkingFrom());
         entity.setAgreementExpiryDate(transport.getAgreementExpiryDate());
+        entity.setServiceType(transport.getServiceType());
         entity.setClientDetails(transport.getClientDetails());
 
         return entity;
@@ -93,13 +81,14 @@ public class ClientConverter {
         client.getClientContacts().addAll(contactList);
     }
 
-
     private static void addEscalationToEntityModel(ClientDto transport, Client client) {
-        if (transport.getEscalation() != null) {
-            Escalation escalation = EscalationConverter.toEntityModel(transport.getEscalation());
+        List<Escalation> escalationList = new ArrayList<>();
+        transport.getEscalations ().stream().filter(Objects::nonNull).forEach(dto -> {
+            Escalation escalation = EscalationConverter.toEntityModel(dto);
             escalation.setClient(client);
-            client.setEscalation(escalation);
-        }
+            escalationList.add(escalation);
+        });
+        client.getEscalations().addAll(escalationList);
     }
 
     private static void addAddressToEntityModel(ClientDto transport, Client client) {
