@@ -1,18 +1,23 @@
 package com.technofacts.lnf.client.service;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
+import com.technofacts.lnf.client.converter.ClientConverter;
+import com.technofacts.lnf.client.model.Client;
 import com.technofacts.lnf.client.repository.ClientRepository;
 import com.technofacts.lnf.client.repository.ProjectRepository;
 import com.technofacts.lnf.client.repository.StatisticsSummary;
 import com.technofacts.lnf.client.repository.TaskRepository;
+import com.technofacts.lnf.dto.client.ClientDto;
 import com.technofacts.lnf.dto.common.DashboardDto;
 import com.technofacts.lnf.dto.common.StatisticsDto;
+import com.technofacts.lnf.dto.employee.EmployeeDto;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.java.Log;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
+import java.time.LocalDate;
+import java.util.Date;
+import java.util.List;
 
 @Service
 @Transactional
@@ -64,9 +69,18 @@ public class DashboardService {
         if (!statisticsSummaries.isEmpty()) {
             dashboardDto.setStatistics(statisticsSummaries.stream()
                     .map(cs -> new StatisticsDto(cs.getYear(), cs.getMonth(), cs.getStatus(), cs.getCount()))
-                    .collect(Collectors.toList()));
+                    .toList());
         }
     }
 
-}
+    public List<ClientDto> findNewlyAddedClients(int daysAgo) {
+        LocalDate localDate = LocalDate.now().minusDays(daysAgo);
+        Date fromDate = java.sql.Date.valueOf(localDate);
+        List<Client> clients = clientRepository.findByDateAfter(fromDate);
+
+        return clients.stream()
+                .map(ClientConverter::toTransportModel)
+                .toList();
+
+    }}
 
